--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,20 +11,8 @@ set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wall -Wextra -O2")
 # Find required packages
 find_package(PkgConfig REQUIRED)
 
-# Find expat (default backend)
-# To use libxml2 backend, compile with: cmake -DUSE_LIBXML2_BACKEND=ON
-if(USE_LIBXML2_BACKEND)
-    pkg_check_modules(LIBXML2 REQUIRED libxml-2.0)
-    set(XML_BACKEND_INCLUDE_DIRS ${LIBXML2_INCLUDE_DIRS})
-    set(XML_BACKEND_LIBRARIES ${LIBXML2_LIBRARIES})
-    set(XML_BACKEND_CFLAGS ${LIBXML2_CFLAGS_OTHER})
-    add_definitions(-DUSE_LIBXML2_BACKEND)
-else()
-    pkg_check_modules(EXPAT REQUIRED expat)
-    set(XML_BACKEND_INCLUDE_DIRS ${EXPAT_INCLUDE_DIRS})
-    set(XML_BACKEND_LIBRARIES ${EXPAT_LIBRARIES})
-    set(XML_BACKEND_CFLAGS ${EXPAT_CFLAGS_OTHER})
-endif()
+# Find expat (XML parsing)
+pkg_check_modules(EXPAT REQUIRED expat)
 
 # Find libzip
 pkg_check_modules(LIBZIP REQUIRED libzip)
@@ -47,7 +35,7 @@ set(HEADERS
 
 # Include directories
 include_directories(
-    ${XML_BACKEND_INCLUDE_DIRS}
+    ${EXPAT_INCLUDE_DIRS}
     ${LIBZIP_INCLUDE_DIRS}
     src
 )
@@ -57,7 +45,7 @@ add_executable(xlsx2csv ${SOURCES} ${HEADERS})
 
 # Link libraries
 target_link_libraries(xlsx2csv
-    ${XML_BACKEND_LIBRARIES}
+    ${EXPAT_LIBRARIES}
     ${LIBZIP_LIBRARIES}
     m
     pthread
@@ -91,7 +79,7 @@ target_link_libraries(xlsx2csv
 # -Wpedantic: Issue warnings needed for strict ISO C compliance - style enforcement
 # Note: -Wfloat-equal is excluded as it conflicts with negative zero handling (signbit checks)
 target_compile_options(xlsx2csv PRIVATE
-    ${XML_BACKEND_CFLAGS}
+    ${EXPAT_CFLAGS_OTHER}
     ${LIBZIP_CFLAGS_OTHER}
     -Wall
     -Wextra
